# bitorder

./: Cargo.toml  README.md
examples/: main.rs
src/: bits.rs  container.rs  lib.rs  reader.rs  writer.rs
